--- a/In_class_Assignment.ipynb
+++ b/In_class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8vDNm0wuWGgvh8OZHg4Aq",
+      "authorship_tag": "ABX9TyOeZzt5eY/q2L/7xI0TLz8k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -98,7 +98,7 @@
         "id": "txKSSLDQjwE3",
         "outputId": "87f35dd1-7bde-4ca4-ad64-b2d274a1a4a7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "id": "T-JMOJvzmAp0",
         "outputId": "b6b97a96-da70-4bb2-c68b-7bd718c1b48f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,6 +186,67 @@
       "metadata": {
         "id": "qIE1r-OhhRcn"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Inventory Management\n",
+        "\n",
+        "Assume an item has a steady demand during every year. There is a cost for placing an order with the supplier and a cost for restocking an item. There is also a cost for storing items. Given these costs and your demand forecast, calculate how much of the item to reorder to minimize annual ordering and storing costs. This amount is referred to as the Economic Order Quantity (EOQ).\n",
+        "\n",
+        "Given the following assumptions:\n",
+        "\n",
+        "D -> annual demand (units/year)\n",
+        "\n",
+        "S -> reorder cost ($/order)\n",
+        "\n",
+        "H -> holding cost ($/unit/year)\n",
+        "\n",
+        "then EOQ=sqrt(2 x D x S/H)\n"
+      ],
+      "metadata": {
+        "id": "CcmU6dwuIpZg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#inputs: annual_demand, reorder_cost, holding_cost\n",
+        "demand=input(\"Enter annual demand (units/year): \")\n",
+        "demand=int(demand)\n",
+        "\n",
+        "reorder=input(\"Enter reorder cost($/order): \")\n",
+        "reorder=float(reorder)\n",
+        "\n",
+        "holding=input(\"Enter holding cost ($/unit/year): \")\n",
+        "holding=float(holding)\n",
+        "\n",
+        "#process\n",
+        "eoq=(2*demand*reorder/holding)**0.5\n",
+        "\n",
+        "#output: display EOQ\n",
+        "print(f\"EOQ: {eoq} units\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yA89lp65Jca1",
+        "outputId": "7990e10a-64f3-4223-e51a-096e075ead4f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter annual demand (units/year): 100\n",
+            "Enter reorder cost($/order): 1.5\n",
+            "Enter holding cost ($/unit/year): 3\n",
+            "EOQ: 10.0 units\n"
+          ]
+        }
+      ]
     }
   ]
 }
