--- a/In_class_Assignment.ipynb
+++ b/In_class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeZzt5eY/q2L/7xI0TLz8k",
+      "authorship_tag": "ABX9TyM3g6rQEGDCTNkbMTl52pvV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,7 +234,7 @@
         "id": "yA89lp65Jca1",
         "outputId": "7990e10a-64f3-4223-e51a-096e075ead4f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,6 +247,52 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Practice if-elif-else statments:\n",
+        "\n",
+        "Design a simple numerical calculator in Python. The user needs to provide 3 inputs: two numbers and the mathematical operator of choice. The program should print the output on the screen"
+      ],
+      "metadata": {
+        "id": "kY_po_GYMRHa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1 = float(input(\"Enter a numerical value: \"))\n",
+        "n2 = float(input(\"Enter another numerical value: \"))\n",
+        "op =input(\"Enter operator (+, -, /, //, **, %): \")\n",
+        "\n",
+        "res= None\n",
+        "\n",
+        "#compare the input for op to each one of the numerical operators\n",
+        "if op == \"+\":\n",
+        "  res= n1 +n2\n",
+        "elif op == \"-\":\n",
+        "  res= n1 -n2\n",
+        "elif op ==\"*\":\n",
+        "  res=n1 *n2\n",
+        "elif op ==\"/\":\n",
+        "  res=n1 /n2\n",
+        "elif op ==\"//\":\n",
+        "  res=n1//n2\n",
+        "elif op ==\"**\":\n",
+        "  res=n1**n2\n",
+        "elif op ==\"%\":\n",
+        "  res=n1%n2\n",
+        "else:\n",
+        "  print(\"Invalid Operator\")\n",
+        "\n",
+        "Print(f\"Result:[{res}]\")\n"
+      ],
+      "metadata": {
+        "id": "ec7MJY99Mc4P"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
