--- a/In_class_Assignment.ipynb
+++ b/In_class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3g6rQEGDCTNkbMTl52pvV",
+      "authorship_tag": "ABX9TyNbJgvxlN3TtzFFwOrkTDPY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -264,7 +264,7 @@
       "source": [
         "n1 = float(input(\"Enter a numerical value: \"))\n",
         "n2 = float(input(\"Enter another numerical value: \"))\n",
-        "op =input(\"Enter operator (+, -, /, //, **, %): \")\n",
+        "op =input(\"Enter operator (+, -, *, /, //, **, %): \")\n",
         "\n",
         "res= None\n",
         "\n",
@@ -286,13 +286,28 @@
         "else:\n",
         "  print(\"Invalid Operator\")\n",
         "\n",
-        "Print(f\"Result:[{res}]\")\n"
+        "print(f\"Result:[{res}]\")\n"
       ],
       "metadata": {
-        "id": "ec7MJY99Mc4P"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ec7MJY99Mc4P",
+        "outputId": "2cbf72ac-72e9-4efe-9b2f-08b5e3ccd0ef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a numerical value: 4\n",
+            "Enter another numerical value: 3\n",
+            "Enter operator (+, -, *, /, //, **, %): *\n",
+            "Result:[12.0]\n"
+          ]
+        }
+      ]
     }
   ]
 }
